Implement `std::error::Error` for `DecodeError` (gated by `std` feature)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ repository = "https://github.com/yrp604/bad64"
 categories = ["api-bindings", "encoding", "no-std"]
 keywords = ["disassembler", "armv8", "arm64", "aarch64", "binja"]
 
+[features]
+std = []
 
 [dependencies]
 bad64-sys = "0.3"
